fix for sizing issue on ios mobile

--- a/src/style.css
+++ b/src/style.css
@@ -55,7 +55,7 @@ body {
 }
 
 #billBoard {
-    height:213px;
+    height:212px;
     width:128px;
     overflow: hidden;
     text-align: center;
